Database integrate and Edit

--- a/PMS_App/PMS_App/Views/Employee/_CreateOrUpdate.cshtml
+++ b/PMS_App/PMS_App/Views/Employee/_CreateOrUpdate.cshtml
@@ -17,8 +17,8 @@
                 </div>
                 <div class="form-floating mb-3">
                     <label for="User_Name">User Name</label>
-                    @Html.TextBoxFor(model => model.User_Name, new { @class="form-control",@id="uname", @maxlength=200 })
-                    @Html.ValidationMessageFor(model => model.User_Name,"",new {@class = "text-danger"})
+                    @Html.TextBoxFor(model => model.UserName, new { @class="form-control",@id="uname", @maxlength=200 })
+                    @Html.ValidationMessageFor(model => model.UserName,"",new {@class = "text-danger"})
                 </div>
                 <div class="form-floating mb-3">
                     <label for="User_Password">Password</label>
