--- a/PMS_App/PMS_App/Views/Home/Login.cshtml
+++ b/PMS_App/PMS_App/Views/Home/Login.cshtml
@@ -6,9 +6,6 @@
 
 <head>
 
-    <div class="alert alert-danger">
-        @ViewBag.ErrorMessage
-    </div>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -21,6 +18,7 @@
     <link href="~/Theme/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
           rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <!-- Custom styles for this template-->
     <link href="~/Theme/css/sb-admin-2.min.css" rel="stylesheet">
@@ -28,7 +26,10 @@
 </head>
 
 <body class="bg-gradient-primary">
-
+            <div class="card alert alert-danger" id="errorMessage">
+                @ViewBag.ErrorMessage
+        </div>
+   
     <div class="container">
 
         <!-- Outer Row -->
@@ -63,16 +64,10 @@
                                             </label>
                                         </div>
                                     </div>
-                                    <button type="submit" class="btn btn-primary btn-user btn-block">
+                                    <button type="submit" class="btn btn-danger btn-user btn-block">
                                         Login
                                     </button>
-                                    <hr>
-                                    <a href="Index.cshtml" class="btn btn-google btn-user btn-block">
-                                        <i class="fab fa-google fa-fw"></i> Login with Google
-                                    </a>
-                                    <a href="Index.cshtml" class="btn btn-facebook btn-user btn-block">
-                                        <i class="fab fa-facebook-f fa-fw"></i> Login with Facebook
-                                    </a>
+                                   
                                 </form>
                                 <hr>
                                 <div class="text-center">
@@ -90,6 +85,12 @@
         </div>
 
     </div>
+    <script>
+        setTimeout(function () {
+            console.log("Fading out errorMessage...");
+            $('#errorMessage').fadeOut('slow');
+        }, 3000); // 10 seconds
+    </script>
 
     <!-- Bootstrap core JavaScript-->
     <script src="~/Theme/vendor/jquery/jquery.min.js"></script>
@@ -100,7 +101,7 @@
 
     <!-- Custom scripts for all pages-->
     <script src="~/Theme/js/sb-admin-2.min.js"></script>
-
+  
 </body>
 
 </html>
