--- a/PMS_App/PMS_App/Views/Shared/_Layout.cshtml
+++ b/PMS_App/PMS_App/Views/Shared/_Layout.cshtml
@@ -66,19 +66,19 @@
             <li class="nav-item">
                 <a class="nav-link" href=@Url.Action("Index","Employee")>
                     <i class="fas fa-fw fa-table"></i>
-                    <span>Create Employee</span>
+                    <span>EMPLOYEE</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href=@Url.Action("Index","Project")>
                     <i class="fas fa-fw fa-table"></i>
-                    <span>Create Project</span>
+                    <span>PROJECT</span>
                 </a>
             </li>
              <li class="nav-item">
                 <a class="nav-link" href=@Url.Action("Index","Task")>
                     <i class="fas fa-fw fa-table"></i>
-                    <span>Create Task</span>
+                    <span>TASK</span>
                 </a>
             </li>
 
@@ -314,7 +314,7 @@
                     <li class="nav-item dropdown no-arrow">
                         <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <span class="mr-2 d-none d-lg-inline text-gray-600 small">RAJAT KUSHWAH</span>
+                            <span class="mr-2 d-none d-lg-inline text-gray-600 small">Admin</span>
                             <img class="img-profile rounded-circle"
                                  src="~/Theme/img/undraw_profile.svg">
                         </a>
