--- a/PMS_App/PMS_App/Views/Employee/Index.cshtml
+++ b/PMS_App/PMS_App/Views/Employee/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<Employee_Model>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-<a href="@Url.Action("Create","Employee")" class="btn btn-primary float-lg-right add" style="padding:10px">Add Employee</a>
+<a href="@Url.Action("Create","Employee")" class="btn btn-danger float-lg-right add" style="padding:10px">Add Employee</a>
 
 
 <br />
@@ -25,7 +25,7 @@
                                 <th>Email</th>
                                 <th>Password</th>
                                 <th>Phone</th>
-                                <th></th>
+                                <th>Edit/Delete</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -35,7 +35,7 @@
                             {
                                 <tr >
                                     <td>@employee.Emp_Name</td>
-                                    <td>@employee.User_Name</td>
+                                    <td>@employee.UserName</td>
                                     <td>@employee.Email</td>
                                     <td>@employee.User_Password</td>
                                     <td>@employee.Phone</td>
