--- a/PMS_App/PMS_App/Views/Project/Index.cshtml
+++ b/PMS_App/PMS_App/Views/Project/Index.cshtml
@@ -2,7 +2,7 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 
-<a href="@Url.Action("Create","Project")" class="btn btn-primary float-lg-right add" style="padding:10px">Add Project</a>
+<a href="@Url.Action("Create","Project")" class="btn btn-danger float-lg-right add" style="padding:10px">Add Project</a>
 
 <br />
 <br />
@@ -18,8 +18,7 @@
         <div class="box">
             <div class="box-shadow">
                 <div class="table-responsive">
-                  @*  <table class="table no-margin table-striped table-bordered" id="dataTable" width="100%" cellspacing="0">
-                   *@     <table class="table no-margin table-striped table-bordered"  id="project-table">
+                       <table class="table no-margin table-striped table-bordered"  id="project-table">
                             <thead>
                                 <tr>
                                     <th>Project Name</th>
