--- a/PMS_App/PMS_App/Views/Employee/Index.cshtml
+++ b/PMS_App/PMS_App/Views/Employee/Index.cshtml
@@ -25,7 +25,7 @@
                                 <th>Email</th>
                                 <th>Password</th>
                                 <th>Phone</th>
-                                <th>Edit/Delete</th>
+                                <th>Action</th>
                             </tr>
                         </thead>
                         <tbody>
