--- a/PMS_App/PMS_App/Views/Project/_CreateOrUpdate.cshtml
+++ b/PMS_App/PMS_App/Views/Project/_CreateOrUpdate.cshtml
@@ -16,17 +16,17 @@
                 </div>
 
                 <div class="form-floating mb-3">
-                    @Html.LabelFor(model => model.Start_Date)
-                    @Html.TextBoxFor(model => model.Start_Date, "{0:dd-MM-yyyy}", new { @class = "form-control datepicker"})
+                    @Html.LabelFor(model => model.StartDate)
+                    @Html.TextBoxFor(model => model.StartDate, "{0:dd-MM-yyyy}", new { @class = "form-control datepicker"})
 
-                    @Html.ValidationMessageFor(model => model.Start_Date, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.StartDate, "", new { @class = "text-danger" })
                 </div>
 
                 <div class="form-floating mb-3">
-                    @Html.LabelFor(model => model.End_Date)
-                    @Html.TextBoxFor(model => model.End_Date, "{0:dd-MM-yyyy}", new { @class = "form-control datepicker"})
+                    @Html.LabelFor(model => model.EndDate)
+                    @Html.TextBoxFor(model => model.EndDate, "{0:dd-MM-yyyy}", new { @class = "form-control datepicker"})
 
-                    @Html.ValidationMessageFor(model => model.End_Date, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.EndDate, "", new { @class = "text-danger" })
                 </div>
 
                 <div class="form-floating mb-3">
