--- a/PMS_App/PMS_App/Views/Task/_CreateOrUpdate.cshtml
+++ b/PMS_App/PMS_App/Views/Task/_CreateOrUpdate.cshtml
@@ -17,12 +17,12 @@
                     @Html.TextAreaFor(model => model.Task_Description, new { @class = "form-control" })
                 </div>
                 <div class="form-floating mb-3">
-                    @Html.LabelFor(model => model.Start_Date)
-                    @Html.TextBoxFor(model => model.Start_Date, "{0:dd-MM-yyyy}", new { @class = "form-control datepicker"})
+                    @Html.LabelFor(model => model.StartDate)
+                    @Html.TextBoxFor(model => model.StartDate, "{0:dd-MM-yyyy}", new { @class = "form-control datepicker"})
                 </div>
                 <div class="form-floating mb-3">
-                    @Html.LabelFor(model => model.End_Date)
-                    @Html.TextBoxFor(model => model.End_Date, "{0:dd-MM-yyyy}", new { @class = "form-control datepicker"})
+                    @Html.LabelFor(model => model.EndDate)
+                    @Html.TextBoxFor(model => model.EndDate, "{0:dd-MM-yyyy}", new { @class = "form-control datepicker"})
                 </div>
                 <div class="form-floating mb-3">
                     @Html.LabelFor(model => model.Employee_Id)
