--- a/PMS_App/PMS_App/Views/Project/_CreateOrUpdate.cshtml
+++ b/PMS_App/PMS_App/Views/Project/_CreateOrUpdate.cshtml
@@ -24,6 +24,7 @@
 
                 <div class="form-floating mb-3">
                     @Html.LabelFor(model => model.EndDate)
+                    
                     @Html.TextBoxFor(model => model.EndDate, "{0:dd-MM-yyyy}", new { @class = "form-control datepicker"})
 
                     @Html.ValidationMessageFor(model => model.EndDate, "", new { @class = "text-danger" })
@@ -49,5 +50,9 @@
     #IsActive {
         transform: scale(1.5); /* Increase the scale of the checkbox */
     }
+
+    $(function() {
+        $(".datepicker").datepicker({ dateFormat: "dd-mm-yy" });
+    });
 
 </style>
