--- a/PMS_App/PMS_App/Views/Task/_CreateOrUpdate.cshtml
+++ b/PMS_App/PMS_App/Views/Task/_CreateOrUpdate.cshtml
@@ -35,9 +35,9 @@
 
                 <div class="form-floating mb-3">
                     @Html.LabelFor(model => model.IsActive)
-                    @Html.CheckBoxFor(model => model.IsActive)
+                    @Html.CheckBoxFor(model => model.IsActive, new { @checked = "checked" })
 
-                    @Html.ValidationMessageFor(model => model.IsActive, "", new { @class = "text-danger" })
+                 
                 </div>
                 <div class="form-floating mb-3">
                     <button type="submit" class="btn btn-primary">Create Task</button>
@@ -52,4 +52,7 @@
         transform: scale(1.5); /* Increase the scale of the checkbox */
     }
 
+    $(function() {
+            $(".datepicker").datepicker({ dateFormat: "dd-mm-yy" });
+        });
 </style>
