--- a/PMS_App/PMS_App/Views/Home/Registration.cshtml
+++ b/PMS_App/PMS_App/Views/Home/Registration.cshtml
@@ -23,18 +23,21 @@
     <!-- Custom styles for this template-->
     <link href="~/Theme/css/sb-admin-2.min.css" rel="stylesheet">
 
-    <div class="alert alert-danger">
-        @ViewBag.ErrorMessage
-    </div>
+    @if (!string.IsNullOrEmpty(ViewBag.ErrorMessage))
+    {
+        <div class="alert alert-danger">
+            @ViewBag.ErrorMessage
+        </div>
+    }
 
 </head>
 <br />
 <br />
 <body class="bg-gradient-primary">
 
-    <div class="container">
+    <div class="container" style="width:50%">
 
-        <div class="card o-hidden border-0 shadow-lg my-5">
+        <div class="card o-hidden border-0 shadow-lg my-4">
             <div class="card-body p-5">
                 <!-- Nested Row within Card Body -->
                 <div class="row justify-content-center">
@@ -68,19 +71,12 @@
                                                id="exampleRepeatPassword" name="repeatPassword" placeholder="Repeat Password">
                                     </div>
                                 </div>
-                                <button type="submit" class="btn btn-primary btn-user btn-block">
+                                <button type="submit" class="btn btn-danger btn-user btn-block">
                                     Register Account
                                 </button>
-                                <hr>
-                                <a href="Index.cshtml" class="btn btn-google btn-user btn-block">
-                                    <i class="fab fa-google fa-fw"></i> Register with Google
-                                </a>
-                                <a href="index.html" class="btn btn-facebook btn-user btn-block">
-                                    <i class="fab fa-facebook-f fa-fw"></i> Register with Facebook
-                                </a>
+                              
                             </form>
-                            <hr>
-                          
+                            
                             <div class="text-center">
                                 <a class="small" href=@Url.Action("Login","Home")>Already have an account? Login! </a>
 
