--- a/PMS_App/PMS_App/Views/Task/Index.cshtml
+++ b/PMS_App/PMS_App/Views/Task/Index.cshtml
@@ -25,18 +25,18 @@
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (var item in Model)
+                        @foreach (var task in Model)
                         {
                             <tr>
-                                <td>@item.Task_Name</td>
-                                <td>@item.Task_Description</td>
-                                <td>@item.Emp_Name</td>
-                                <td>@item.Project_Name</td>
-                                <td>@item.StartDate.ToString("dd-MM-yyyy")</td>
-                                <td>@item.EndDate.ToString("dd-MM-yyyy")</td>
+                                <td>@task.Task_Name</td>
+                                <td>@task.Task_Description</td>
+                                <td>@task.Emp_Name</td>
+                                <td>@task.Project_Name</td>
+                                <td>@task.StartDate.ToShortDateString()</td>
+                                <td>@task.EndDate.ToShortDateString()</td>
                                 <td>
-                                    <a href="@Url.Action("Edit", "Task", new { id = item.Id })" class="btn btn-dark edit-btn">Edit</a>
-                                    <a href="@Url.Action("Delete", "Task", new { id = item.Id })" class="btn btn-danger delete-btn">Delete</a>
+                                    <a href="@Url.Action("Edit", "Task", new { id = task.Id })" class="btn btn-dark edit-btn">Edit</a>
+                                    <a href="@Url.Action("Delete", "Task", new { id = task.Id })" class="btn btn-danger delete-btn">Delete</a>
                                 </td>
                             </tr>
                         }
